[package]
name = "shmalloc"
version = "0.1.0"
edition = "2021"
description = "A shmitty heap for your shmitty code."
license = "WTFPL OR WTFPL OR WTFPL OR WTFPL OR WTFPL OR WTFPL OR WTFPL OR WTFPL"
repository = "https://github.com/tamuctf/shmalloc"

[dependencies]
libc = "0.2"
linked_list_allocator = { version = "0.9", default-features = false, features = ["const_mut_refs"] }
once_cell = "1.8"
spin = "0.9"
